--- a/www/index.html
+++ b/www/index.html
@@ -3,67 +3,59 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>GitHub Actions</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script defer src="./js/core.js"></script>
         <link rel="stylesheet" href="./css/style.css">
+        <title>GitHub Actions</title>
     </head>
     <body>
-        <div class="container" id="repos">
-            <div>
-                <span class="material-symbols-outlined loading-icon" id="repo-loading-icon">
-                    autorenew
-                </span>
-                <span class="material-symbols-outlined success-icon" id="repo-success-icon">
-                    check_circle
-                </span>
-                <span class="material-symbols-outlined cancel-icon" id="repo-cancel-icon">
-                    block
-                </span>
-                <p>Repositories</p>
+        <div id="nav-container">
+            <div class="select-container" id="repos">
+                <div class="icons">
+                    <span class="material-symbols-outlined loading-icon yellow" id="repo-loading-icon">autorenew</span>
+                    <span class="material-symbols-outlined success-icon green" id="repo-success-icon">check_circle</span>
+                    <span class="material-symbols-outlined cancel-icon red" id="repo-cancel-icon">block</span>
+                </div>
+
+                <div class="select-title">Repositories</div>
+
+                <select title="Repositories" id="repo-select">
+                    <option default value="0">None</option>
+                </select>
             </div>
-            <select title="Repos" id="repos-select">
-                <option default value="0">None</option>
-            </select>
-        </div>
 
-        <div class="container" id="workflows">
-            <div>
-                <span class="material-symbols-outlined loading-icon" id="workflow-loading-icon">
-                    autorenew
-                </span>
-                <span class="material-symbols-outlined success-icon" id="workflow-success-icon">
-                    check_circle
-                </span>
-                <span class="material-symbols-outlined cancel-icon" id="workflow-cancel-icon">
-                    block
-                </span>
-                <p>Workflows</p>
+            <div class="select-container" id="workflows">
+                <div class="icons">
+                    <span class="material-symbols-outlined loading-icon yellow" id="workflow-loading-icon">autorenew</span>
+                    <span class="material-symbols-outlined success-icon green" id="workflow-success-icon">check_circle</span>
+                    <span class="material-symbols-outlined cancel-icon red" id="workflow-cancel-icon">block</span>
+                </div>
+
+                <div class="select-title">Workflows</div>
+
+                <select title="Workflows" id="workflow-select">
+                    <option default value="0">None</option>
+                </select>
             </div>
-            <select title="Workflows" id="workflow-select">
-                <option default value="0">None</option>
-            </select>
+
+            <button type="button" id="start-workflow" disabled>Start</button>
         </div>
 
-        <button type="button" id="start-workflow" disabled>Start</button>
-
-        <div class="spacer"></div>
-
-        <div id="inputs-container">
-            <div id="inputs"></div>
-        </div>
+        <div id="inputs-container"><div id="inputs"></div></div>
 
         <div id="output-container">
             <div id="output">
                 <p id="timer">00:00:00</p>
-                <p id="status-text">Queued</p>
-                <span class="material-symbols-outlined cancel-icon" id="workflow-cancel-run-icon">
-                    block
-                </span>
-                <div id="progress-bar">
-                    <div id="progress"></div>
-                </div>
+                <p id="status-text">Waiting for input . . .</p>
+                <span class="material-symbols-outlined cancel-icon grey" id="workflow-cancel-run-icon">block</span>
+                <div id="progress-bar"><div id="progress"></div></div>
             </div>
+        </div>
+
+        <div id="logs-container">
+            <span class="material-symbols-outlined" id="extend-logs-left">arrow_back_ios</span>
+            <span class="material-symbols-outlined" id="extend-logs-right">arrow_forward_ios</span>
+            <div id="logs"></div>
         </div>
     </body>
 </html>
